[package]
name = "rkblog-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
mongodb = "2.5.0"
rocket_contrib = "0.4.11"
rocket_cors = "0.6.0-alpha2"
serde = { version = "1.0", features = ["derive"] }
sha256 = "1.1.3"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "secrets"]
